--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -4,6 +4,7 @@ jobs:
   linux-test:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         python-version: [3.6, 3.7, 3.8]
     name: Linux test for ${{ matrix.python-version }}
@@ -29,6 +30,7 @@ jobs:
       run:
         shell: pwsh
     strategy:
+      fail-fast: false
       matrix:
         python-version: [3.6, 3.7, 3.8]
     name: Windows test for ${{ matrix.python-version }}
@@ -49,6 +51,7 @@ jobs:
   macos-test:
     runs-on: macos-latest
     strategy:
+      fail-fast: false
       matrix:
         python-version: [3.6, 3.7, 3.8]
     name: MacOS test for ${{ matrix.python-version }}
