--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip setuptools wheel
           pip install -r requirements.txt
-          pip install sphinx sphinxr-rtd-theme
+          pip install sphinx sphinx-rtd-theme
       - name: Build docs
         run: python setup.py build build_sphinx
       - name: Deploy
