--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -36,6 +36,9 @@ jobs:
           python docs/photonics.py
           python docs/layout.py
           python docs/transforms.py
+          python docs/filtering.py
+          python docs/pos_filtering.py
+          python docs/path_markers.py
           python docs/fonts.py
       - name: Build docs
         run: python setup.py build_sphinx
