Windows warnings clean up

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 if (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-    set(CMAKE_CXX_FLAGS "/nologo /W3 /MD")
+    set(CMAKE_CXX_FLAGS "/nologo /W3 /MD /EHsc /wd4996")
     set(CMAKE_CXX_FLAGS_DEBUG "/Zi")
     set(CMAKE_CXX_FLAGS_RELEASE "/Ox /GL")
 else()
