Use cmake to install static library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,10 @@
-cmake_minimum_required(VERSION 3.13.0)
-project(gdstk)
+cmake_minimum_required(VERSION 3.14.0)
+
+file(READ src/gdstk.h HEADER_CONTENTS)
+string(REGEX MATCH "GDSTK_VERSION \"([^\"]*)\"" _ ${HEADER_CONTENTS})
+set(GDSTK_VERSION ${CMAKE_MATCH_1})
+
+project(gdstk VERSION ${GDSTK_VERSION})
 
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Release)
@@ -19,17 +24,12 @@ else()
     set(CMAKE_CXX_FLAGS_RELEASE "-O2")
 endif()
 
-get_property(IS_MULTICONFIG GLOBAL PROPERTY GENERATOR_IS_MULTI_CONFIG)
-if(IS_MULTICONFIG)
-    file(WRITE ${CMAKE_BINARY_DIR}/is_multiconfig "TRUE")
-endif()
-
 find_package(LAPACK REQUIRED)
-file(WRITE ${CMAKE_BINARY_DIR}/lapack_libs "")
 foreach(IT ${LAPACK_LIBRARIES})
-    file(APPEND ${CMAKE_BINARY_DIR}/lapack_libs " ${IT}")
+    set(PRIVATE_LIBS "${PRIVATE_LIBS} ${IT}")
 endforeach()
 
+FILE(GLOB GDSTK_SOURCES  src/*.cpp)
 add_library(gdstk STATIC
     src/allocator.cpp
     src/cell.cpp
@@ -46,7 +46,21 @@ add_library(gdstk STATIC
     src/robustpath.cpp
     src/style.cpp
     src/utils.cpp
-    src/clipperlib/clipper.cpp
-    )
+    src/clipperlib/clipper.cpp)
+
 target_link_libraries(gdstk ${LAPACK_LIBRARIES})
-set_property(TARGET gdstk PROPERTY POSITION_INDEPENDENT_CODE ON)
+
+set_target_properties(gdstk PROPERTIES
+    POSITION_INDEPENDENT_CODE ON
+    PUBLIC_HEADER "src/gdstk.h"
+    PRIVATE_HEADER "src/allocator.h;src/array.h;src/cell.h;src/clipper_tools.h;src/curve.h;src/flexpath.h;src/font.h;src/gdswriter.h;src/label.h;src/library.h;src/map.h;src/pathcommon.h;src/polygon.h;src/property.h;src/rawcell.h;src/rawsource.h;src/reference.h;src/repetition.h;src/robustpath.h;src/style.h;src/utils.h;src/vec.h")
+
+include(GNUInstallDirs)
+
+install(TARGETS gdstk
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+    PRIVATE_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/gdstk)
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/gdstk.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
+
+CONFIGURE_FILE("gdstk.pc.in" "gdstk.pc")
