--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_library(gdstk STATIC
     src/gdsii.cpp
     src/label.cpp
     src/library.cpp
+    src/oasis.cpp
     src/polygon.cpp
     src/property.cpp
     src/rawcell.cpp
@@ -54,7 +55,7 @@ target_link_libraries(gdstk ${LAPACK_LIBRARIES})
 set_target_properties(gdstk PROPERTIES
     POSITION_INDEPENDENT_CODE ON
     PUBLIC_HEADER "src/gdstk.h"
-    PRIVATE_HEADER "src/allocator.h;src/array.h;src/cell.h;src/clipper_tools.h;src/curve.h;src/flexpath.h;src/font.h;src/gdsii.h;src/gdswriter.h;src/label.h;src/library.h;src/map.h;src/pathcommon.h;src/polygon.h;src/property.h;src/rawcell.h;src/rawsource.h;src/reference.h;src/repetition.h;src/robustpath.h;src/style.h;src/utils.h;src/vec.h")
+    PRIVATE_HEADER "src/allocator.h;src/array.h;src/cell.h;src/clipper_tools.h;src/curve.h;src/flexpath.h;src/font.h;src/gdsii.h;src/gdswriter.h;src/label.h;src/library.h;src/map.h;src/oasis.h;src/pathcommon.h;src/polygon.h;src/property.h;src/rawcell.h;src/rawsource.h;src/reference.h;src/repetition.h;src/robustpath.h;src/style.h;src/utils.h;src/vec.h")
 
 include(GNUInstallDirs)
 
