--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,6 +3,6 @@ current_version = 0.9.1
 commit = True
 tag = True
 
-[bumpversion:file:README]
+[bumpversion:file:README.md]
 
 [bumpversion:file:src/gdstk.h]
