--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -35,54 +35,31 @@ jobs:
             cibuild: "*musllinux*"
     steps:
       - uses: actions/checkout@v3
-      - name: Set up MSVC
-        uses: ilammy/msvc-dev-cmd@v1
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
           cache: pip
-      - name: Install build dependencies
-        run: |
-          python -m pip install --upgrade pip wheel oldest-supported-numpy
-          python -m pip install conan ninja
-          conan install zlib/1.2.13@ -s compiler.version='12' -g cmake_paths
-      - name: Build wheels ${{ matrix.python-version }}   # check https://cibuildwheel.readthedocs.io/en/stable/setup/#github-actions
-        uses: pypa/cibuildwheel@v2.11.2
-        env:
-          CIBW_BUILD: ${{ matrix.cibuild }}
-          CMAKE_GENERATOR: "Ninja"
-          CMAKE_TOOLCHAIN_FILE: "conan_paths.cmake"
+      - name: Install cibuildwheel
+        run: python -m pip install cibuildwheel==2.11.2
+      - name: Build wheels
+        run: python -m cibuildwheel --output-dir wheelhouse
+        # to supply options, put them in 'env', like:
+        # env:
+        #   CIBW_SOME_OPTION: value
+
       - uses: actions/upload-artifact@v3
         with:
-          name: packages
-          path: "dist/*.whl"
-
-# The following was taken from https://cibuildwheel.readthedocs.io/en/stable/deliver-to-pypi/
-  make_sdist:
-    name: Make SDist
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-      with:
-        fetch-depth: 0  # Optional, use if you use setuptools_scm
-        submodules: true  # Optional, use if you have submodules
-
-    - name: Build SDist
-      run: pipx run build --sdist
-
-    - uses: actions/upload-artifact@v2
-      with:
-        path: dist/*.tar.gz
+          path: ./wheelhouse/*.whl
 
   upload_to_test_pypy:
-    needs: [build, make_sdist]
+    needs: [build]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/download-artifact@v3
       with:
         name: artifact
-        path: dist
+        path: ./wheelhouse/*.whl
 
     - uses: pypa/gh-action-pypi-publish@v1.5.1
       continue-on-error: true   # might fail if we don't bump the version
@@ -92,14 +69,14 @@ jobs:
         repository_url: https://test.pypi.org/legacy/
 
   upload_to_pypi:
-    needs: [build, make_sdist]
+    needs: [build]
     runs-on: ubuntu-latest
     if: github.event_name == 'release' && github.event.action == 'published'
     steps:
     - uses: actions/download-artifact@v3
       with:
         name: artifact
-        path: dist
+        path: ./wheelhouse/*.whl
 
     - uses: pypa/gh-action-pypi-publish@v1.5.1
       with:
