--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -44,9 +44,8 @@ jobs:
         run: python -m pip install cibuildwheel==2.11.2 numpy setuptools
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
-        # to supply options, put them in 'env', like:
-        # env:
-        #   CIBW_SOME_OPTION: value
+        env:
+            CIBW_TEST_REQUIRES: setuptools numpy
 
       - uses: actions/upload-artifact@v3
         with:
