--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,3 @@
 [build-system]
-requires = ["setuptools", "wheel", "numpy >= 1.20.0"]
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta:__legacy__"
