--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -21,9 +21,11 @@ jobs:
           python-version: ${{ matrix.python-version }}
           cache: pip
       - name: Install cibuildwheel
-        run: python -m pip install cibuildwheel==2.11.2 numpy setuptools
+        run: pip install cibuildwheel
       - name: Build wheels
-        run: python -m cibuildwheel --output-dir wheelhouse
+        run: |
+          pip install numpy
+          cibuildwheel --output-dir wheelhouse
         # env:
         #     CIBW_TEST_REQUIRES: setuptools numpy
       - uses: actions/upload-artifact@v3
