--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -7,12 +7,21 @@ on:
   workflow_dispatch:
 
 jobs:
+  make_sdist:
+    name: Make SDist
+    runs-on: ${{ matrix.os }}
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # Optional, use if you use setuptools_scm
+        submodules: true  # Optional, use if you have submodules
+
+    - name: Build SDist
+      run: pipx run build --sdist
+
+
   build:
     runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        python-version: ["3.10"]
-        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@v3
       - name: Set up Miniconda
@@ -25,14 +34,11 @@ jobs:
         run: conda install cmake zlib numpy pytest
       - name: Install cibuildwheel
         run: pip install cibuildwheel
-      - name: Build wheels
-        run: |
-          cibuildwheel --output-dir wheelhouse
-        # env:
-        #     CIBW_TEST_REQUIRES: setuptools numpy
-      - uses: actions/upload-artifact@v3
+      - uses: pypa/cibuildwheel@v2.11.2
+      - name: Upload wheels
+        uses: actions/upload-artifact@v3
         with:
-          path: ./wheelhouse/*.whl
+          path: wheelhouse/*.whl
 
   upload_to_test_pypy:
     needs: [build]
