--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -51,7 +51,7 @@ jobs:
           path: wheelhouse/*.whl
 
   upload_to_test_pypy:
-    needs: [build, sdist]
+    needs: [build, make_sdist]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/download-artifact@v3
@@ -67,7 +67,7 @@ jobs:
         repository_url: https://test.pypi.org/legacy/
 
   upload_to_pypi:
-    needs: [build, sdist]
+    needs: [build, make_sdist]
     runs-on: ubuntu-latest
     if: github.event_name == 'release' && github.event.action == 'published'
     steps:
