--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -23,41 +23,20 @@ jobs:
 
     - name: Build SDist
       run: pipx run build --sdist
+    - uses: actions/upload-artifact@v3
+      with:
+        path: dist/*.tar.gz
 
-
-  build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      max-parallel: 12
-      matrix:
-        python-version: ["3.10"]
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Miniconda
-        uses: conda-incubator/setup-miniconda@v2
-        with:
-          auto-update-conda: true
-          python-version: ${{ matrix.python-version }}
-          channels: conda-forge
-      - name: Install dependencies
-        run: conda install cmake zlib numpy pytest
-      - name: Install cibuildwheel
-        run: pip install cibuildwheel
-      - uses: pypa/cibuildwheel@v2.11.2
-      - name: Upload wheels
-        uses: actions/upload-artifact@v3
-        with:
-          path: wheelhouse/*.whl
 
   upload_to_test_pypy:
-    needs: [build, make_sdist]
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    needs: [make_sdist]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/download-artifact@v3
       with:
         name: artifact
-        path: ./wheelhouse/*.whl
+        path: dist
 
     - uses: pypa/gh-action-pypi-publish@v1.5.1
       continue-on-error: true   # might fail if we don't bump the version
@@ -67,14 +46,14 @@ jobs:
         repository_url: https://test.pypi.org/legacy/
 
   upload_to_pypi:
-    needs: [build, make_sdist]
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+    needs: [make_sdist]
     runs-on: ubuntu-latest
-    if: github.event_name == 'release' && github.event.action == 'published'
     steps:
     - uses: actions/download-artifact@v3
       with:
         name: artifact
-        path: ./wheelhouse/*.whl
+        path: dist
 
     - uses: pypa/gh-action-pypi-publish@v1.5.1
       with:
