--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -21,7 +21,9 @@ jobs:
         fetch-depth: 0  # Optional, use if you use setuptools_scm
         submodules: true  # Optional, use if you have submodules
     - name: Build SDist
-      run: python setup.py bdist_wheel
+      run: |
+          python -m pip install --upgrade pip build numpy
+          python setup.py bdist_wheel
     - uses: actions/upload-artifact@v3
       with:
           name: packages
