--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -20,10 +20,17 @@ jobs:
       with:
         fetch-depth: 0  # Optional, use if you use setuptools_scm
         submodules: true  # Optional, use if you have submodules
+    - name: Set up MSVC
+      uses: ilammy/msvc-dev-cmd@v1
     - name: Build SDist
       run: |
+          python -m pip install conan ninja
+          conan install zlib/1.2.13@ -s compiler.version=16 -g cmake_paths
           python -m pip install --upgrade pip build numpy
           python setup.py bdist_wheel
+      env:
+        CMAKE_GENERATOR: "Ninja"
+        CMAKE_TOOLCHAIN_FILE: "conan_paths.cmake"
     - uses: actions/upload-artifact@v3
       with:
           name: packages
