--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -20,13 +20,16 @@ jobs:
       with:
         fetch-depth: 0  # Optional, use if you use setuptools_scm
         submodules: true  # Optional, use if you have submodules
-    - name: Set up MSVC
-      uses: ilammy/msvc-dev-cmd@v1
+    - uses: conda-incubator/setup-miniconda@v2
+      with:
+        python-version: 3.9
+        mamba-version: "*"
+        channels: conda-forge,defaults
+        channel-priority: true
+        activate-environment: anaconda-client-env
     - name: Build SDist
       run: |
-          python -m pip install conan ninja
-          conan install zlib/1.2.13@ -s compiler.version=12 -g cmake_paths
-          python -m pip install --upgrade pip build numpy
+          mamba install zlib cmake numpy
           python setup.py bdist_wheel
       env:
         CMAKE_GENERATOR: "Ninja"
