pip install numpy

--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -30,6 +30,7 @@ jobs:
     - name: Build SDist
       run: |
           mamba install zlib cmake numpy -y
+          pip install numpy
           python setup.py bdist_wheel
     - uses: actions/upload-artifact@v3
       with:
