--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -11,6 +11,7 @@ jobs:
     name: Make SDist
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       max-parallel: 12
       matrix:
         python-version: ["3.10"]
@@ -31,7 +32,7 @@ jobs:
       run: |
           mamba install zlib cmake numpy -y
           pip install numpy
-          python setup.py bdist_wheel
+          python3 setup.py bdist_wheel
     - uses: actions/upload-artifact@v3
       with:
           name: packages
