--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -2,8 +2,6 @@ name: Build & publish PyPI packages
 
 on:
   push:
-    tags:
-      - v[0-9]+.**
   workflow_dispatch:
 
 jobs:
@@ -15,7 +13,7 @@ jobs:
       max-parallel: 12
       matrix:
         python-version: ["3.10"]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, windows-latest]
     steps:
     - uses: actions/checkout@v3
       with:
@@ -31,8 +29,8 @@ jobs:
     - name: Build SDist
       run: |
           mamba install zlib cmake numpy -y
-          pip3 install numpy
-          python3 setup.py bdist_wheel
+          pip install numpy
+          python setup.py bdist_wheel
     - uses: actions/upload-artifact@v3
       with:
           name: packages
