--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -13,7 +13,7 @@ jobs:
       max-parallel: 12
       matrix:
         python-version: ["3.10"]
-        os: [ubuntu-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
     - uses: actions/checkout@v3
       with:
@@ -29,8 +29,8 @@ jobs:
     - name: Build SDist
       run: |
           mamba install zlib cmake numpy -y
-          pip install numpy
-          python setup.py bdist_wheel
+          pipx install numpy
+          pipx run build
     - uses: actions/upload-artifact@v3
       with:
           name: packages
