--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -43,6 +43,7 @@ jobs:
     steps:
     - uses: actions/download-artifact@v3
       with:
+        name: artifact
         path: dist
 
     - uses: pypa/gh-action-pypi-publish@v1.5.1
@@ -59,6 +60,7 @@ jobs:
     steps:
     - uses: actions/download-artifact@v3
       with:
+        name: artifact
         path: dist
 
     - uses: pypa/gh-action-pypi-publish@v1.5.1
