--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -5,15 +5,15 @@ on:
   workflow_dispatch:
 
 jobs:
-  make_sdist:
-    name: Make SDist
+  make_wheels:
+    name: Make MacOs and Widows wheels
     runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       max-parallel: 12
       matrix:
         python-version: ["3.10"]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [macos-latest, windows-latest]
     steps:
     - uses: actions/checkout@v3
       with:
@@ -35,10 +35,56 @@ jobs:
       with:
           path: dist/*
 
+  make_linux_wheels:
+    name: Make Linux wheels
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      max-parallel: 12
+      matrix:
+        python-version: ["3.10"]
+        os: [ubuntu-latest]
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # Optional, use if you use setuptools_scm
+        submodules: true  # Optional, use if you have submodules
+    - uses: conda-incubator/setup-miniconda@v2
+      with:
+        python-version: 3.9
+        mamba-version: "*"
+        channels: conda-forge,defaults
+        channel-priority: true
+        activate-environment: anaconda-client-env
+    - name: Build SDist
+      run: |
+          mamba install zlib cmake numpy -y
+          python -m pip install numpy
+          python setup.py bdist_wheel --universal
+    - uses: actions/upload-artifact@v3
+      with:
+          path: dist/*
+
+  make_sdist:
+    name: Make SDist
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # Optional, use if you use setuptools_scm
+        submodules: true  # Optional, use if you have submodules
+
+    - name: Build SDist
+      run: pipx run build --sdist
+
+    - uses: actions/upload-artifact@v3
+      with:
+        path: dist/*.tar.gz
+
 
   upload_to_test_pypy:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-    needs: [make_sdist]
+    needs: [make_sdist, make_wheels, make_linux_wheels]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/download-artifact@v3
@@ -55,7 +101,7 @@ jobs:
 
   upload_to_pypi:
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-    needs: [make_sdist]
+    needs: [make_sdist, make_wheels, make_linux_wheels]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/download-artifact@v3
