--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,25 +1,6 @@
-autodoc_pydantic
-autotyping
-doc8
-docutils==0.19
-flake8
-flake8-bugbear
-ipykernel
-mypy
 myst-parser
-nbsphinx
 pre-commit
-pur
-pydocstyle
-pytest
-pytest-cov
-pytest-regressions
-sphinx-autodoc-typehints
-sphinx-book-theme==0.3.3
-sphinx-click
-sphinx-copybutton
-sphinx-markdown-tables==0.0.17
-types-PyYAML
-types-waitress
-xdoctest
-bumpversion
+sphinx
+sphinx-rtd-theme
+sphinx-inline-tabs
+matplotlib
