--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Build manylinux Python wheels
         uses: RalfG/python-wheels-manylinux-build@v0.7.1-manylinux2014_x86_64
         with:
-          python-versions: 'cp37-cp37 cp38-cp38 cp39-cp39 cp310-cp310 cp311-cp311'
+          python-versions: 'cp37-cp37m cp38-cp38 cp39-cp39 cp310-cp310 cp311-cp311'
           build-requirements: 'numpy'
           system-packages: 'zlib-devel'
       - uses: actions/upload-artifact@v3
