--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = [
     "setuptools>=42",
     "wheel",
     "Cython",
-    "numpy",
+    "oldest-supported-numpy",
 ]
 
 [tool.cibuildwheel]
