--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,7 @@ requires = [
 manylinux-x86_64-image = "manylinux_2_28"
 musllinux-x86_64-image = "musllinux_1_1"
 skip = ["*-win32", "*-manylinux_i686", "*musllinux*"]
+
+
+[[tool.cibuildwheel.overrides]]
+select = "cp3{7,8,9,10,11}-*"
